# qontinui-runner

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RUNNER_ARCHITECTURE_PLAN.md  demo-config.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CODE_SIGNING.md  IMPLEMENTATION_SUMMARY.md
examples/: config-mock-mode.json  config-real-mode.json  config-screenshot-mode.json  notepad_automation.json
icons/platform/macos/: app.icns  qontinui-file.icns  qontinui-project.icns
python-bridge/: dsl_action_executor.py  event_emitter.py  executor_wrapper.py  minimal_bridge.py  pyproject.toml  qontinui_bridge.py  qontinui_executor.py  requirements.txt  run_with_poetry.bat
src/: App-original.tsx  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  exported-config.json  python-bridge  tauri.conf.json  test-config.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  logging.rs  main.rs
src-tauri/src/config/: loader.rs  mod.rs  types.rs
src-tauri/src/executor/: event_handler.rs  mod.rs  python_bridge.rs
src/components/: CollapsiblePanel.tsx  RecordingControl.tsx  StatusIndicator.tsx
