[tool.poetry]
name = "qontinui-runner-bridge"
version = "0.1.0"
description = "Python bridge for Qontinui Runner"
authors = ["Joshua Spinak <jspinak@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2"
qontinui = {path = "../../qontinui", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.1.0"
ruff = "^0.13.0"
mypy = "^1.18.1"
pylint = "^3.3.8"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "SIM"]
ignore = ["E501", "C901", "T201"]

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
